# churn-prediction-ml-analysis

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  churn.ipynb  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
app/: main.py  utils.py
app/models/: schemas.py
notebooks/: churn.ipynb
notebooks/ml/: feature_order_simple.pkl  raw_feature_order.pkl
tests/: api_call.ipynb
