[project]
name = "churn-ml"
version = "0.1.0"
description = "Traditional churn prediction - ML business case "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.0.3",
    "scikit-learn==1.5.2",
    "lightgbm>=3.3.0",
    "imbalanced-learn==0.14.0",
    "numba<0.60.0",
    "shap>=0.40.0",
    "optuna>=2.10.0",
    "plotly>=5.3.0",
    "seaborn>=0.11.0",
    "matplotlib>=3.4.0",
    "ipykernel>=7.1.0",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "fastapi==0.121.1",
    "uvicorn>=0.38.0",
    "slowapi>=0.1.9",
    "nbformat>=5.10.4",
    "mangum>=0.19.0"
]
